--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,8 +7,11 @@
     <!-- Use the title from a page's frontmatter if it has one -->
     <title><%= current_page.data.name %> - radiodns.uk</title>
     <%= stylesheet_link_tag "bootstrap-4.0.0-beta.2.min.css" %>
+    <%= stylesheet_link_tag "style.css" %>
   </head>
   <body>
+    <%= partial "navbar" %>
+
     <div class="container">
       <%= yield %>
     </div>
