Made table on homepage responsive

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,13 +3,14 @@ id: home
 name: RadioDNS Services in the United Kingdom
 ---
 
-<table class="table">
+
+<table class="table table-responsive">
 
 <thead>
   <tr>
-    <th></th>
-    <th>Name</th>
-    <th>Description</th>
+    <th scope="col"></th>
+    <th scope="col">Name</th>
+    <th scope="col">Description</th>
   </tr>
 </thead>
 
