--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,6 +16,8 @@
       <%= yield %>
     </div>
 
+    <%= partial "footer" %>
+
     <%= javascript_include_tag "jquery-3.2.1.slim.min.js" %>
     <%= javascript_include_tag "bootstrap-4.0.0-beta.2.bundle.min.js" %>
   </body>
