--- a/source/_footer.erb
+++ b/source/_footer.erb
@@ -8,7 +8,7 @@
         <a href="https://github.com/njh/radiodns-uk">https://github.com/njh/radiodns-uk</a>
       </p>
       <p>
-        This page was last updated: <%= Time.now %>
+        This page was last updated: <%= Date.today %>
       </p>
     </div>
   </footer>
