--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Use the title from a page's frontmatter if it has one -->
+    <meta charset="utf-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title><%= current_page.data.name %> - radiodns.uk</title>
     <%= stylesheet_link_tag "bootstrap-4.0.0-beta.2.min.css" %>
     <%= stylesheet_link_tag "style.css" %>
