--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <%= tag('link', :rel => :canonical, :href => File.join(app.config.url_root, current_page.url)) %>
+
     <title><%= current_page.data.name %> - radiodns.uk</title>
     <%= stylesheet_link_tag "bootstrap-4.0.0-beta.2.min.css" %>
     <%= stylesheet_link_tag "style.css" %>
