Fix for services with duplicate bearer ids Store bearer ids as a hash

--- a/source/layouts/service_layout.erb
+++ b/source/layouts/service_layout.erb
@@ -26,9 +26,9 @@
       <% end %>
 
       <h2>Bearers</h2>
-      <% current_page.data.bearers.each do |bearer| %>
+      <% current_page.data.bearers.each_pair do |bearer_id, bearer| %>
         <ul>
-          <li><%= bearer.id %></li>
+          <li><%= bearer_id %></li>
         </ul>
       <% end %>
     </div>
