Added <header> round the navbar

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -11,7 +11,9 @@
     <%= stylesheet_link_tag "style.css" %>
   </head>
   <body>
-    <%= partial "navbar" %>
+    <header>
+      <%= partial "navbar" %>
+    </header>
 
     <div class="container">
       <%= yield %>
