Implemented listing multiplexes from database

--- a/views/_navbar.erb
+++ b/views/_navbar.erb
@@ -4,10 +4,10 @@
   </a>
 
   <ul class="navbar-nav ml-auto">
-    <li class="nav-item <%= current_page.page_id == 'home' ? 'active' : '' %>">
+    <li class="nav-item">
       <a class="nav-link" href="/">Home</a>
     </li>
-    <li class="nav-item <%= current_path.match(%r|^multiplexes/|) ? 'active' : '' %>">
+    <li class="nav-item">
       <a class="nav-link" href="/multiplexes">Multiplexes</a>
     </li>
   </ul>
