Added link to Transmitters page to the navbar

--- a/views/_navbar.erb
+++ b/views/_navbar.erb
@@ -8,6 +8,9 @@
       <a class="nav-link" href="/">Home</a>
     </li>
     <li class="nav-item">
+      <a class="nav-link" href="/transmitters">Transmitters</a>
+    </li>
+    <li class="nav-item">
       <a class="nav-link" href="/multiplexes">Multiplexes</a>
     </li>
   </ul>
