Added back service and transmitter counts

--- a/views/multiplexes_index.erb
+++ b/views/multiplexes_index.erb
@@ -28,10 +28,10 @@
           <%= multiplex.block %>
         </td>
         <td>
-          <%#= multiplex.services.count %>
+          <%= multiplex.bearers.count %>
         </td>
         <td>
-          <%#= multiplex.transmitters.count %>
+          <%= multiplex.transmitters.count %>
         </td>
       </tr>
     <% end %>
