Implemented looking up bearers and writing them to the authorities table

--- a/views/multiplexes_show.erb
+++ b/views/multiplexes_show.erb
@@ -18,6 +18,7 @@
     <tr>
       <th scope="col">SID</th>
       <th scope="col">Label</th>
+      <th scope="col">Authoritative FQDN</th>
     </tr>
   </thead>
 
@@ -29,6 +30,9 @@
         </td>
         <td>
           <%= bearer.ofcom_label %>
+        </td>
+        <td>
+          <%= bearer.authority.fqdn || '-' %>
         </td>
       </tr>
     <% end %>
