--- a/views/transmitters_show.erb
+++ b/views/transmitters_show.erb
@@ -30,7 +30,7 @@
           <%= multiplex.eid %>
         </td>
         <td>
-          <a href="/multiplexes/<%= multiplex.eid.downcase %>"><%= multiplex.name %></a>
+          <a href="<%= multiplex.path %>"><%= multiplex.name %></a>
         </td>
         <td>
           <%= multiplex.block %>
