--- a/views/multiplexes_show.erb
+++ b/views/multiplexes_show.erb
@@ -58,7 +58,7 @@
     <% @multiplex.transmitters.each do |transmitter| %>
       <tr>
         <td>
-          <a href="/transmitters/<%= transmitter.ngr.downcase %>"><%= transmitter.name %></a>
+          <a href="<%= transmitter.path %>"><%= transmitter.name %></a>
         </td>
         <td>
           <%= transmitter.area %>
