--- a/views/services_index.erb
+++ b/views/services_index.erb
@@ -1,5 +1,8 @@
-<div class="row">
-  <table class="table table-responsive">
+<% content_for :page_title, "Stations with RadioDNS in the UK" %>
+
+<h1><%= content_for :page_title %></h1>
+
+<table class="table table-responsive">
 
   <thead>
     <tr>
@@ -31,5 +34,4 @@
     <% end %>
   </tbody>
 
-  </table>
-</div>
+</table>
