Added /gems page

--- a/views/_footer.erb
+++ b/views/_footer.erb
@@ -4,6 +4,11 @@
         Created by <a href="http://twitter.com/njh">@njh</a>
       </p>
       <p>
+        This site is powered by <a href="http://roda.jeremyevans.net/">Roda</a>,
+        <a href="http://sequel.jeremyevans.net/">Sequel</a> and
+        <a href="/gems">several other ruby gems</a>.
+      </p>
+      <p>
         This website is Open Source, please help improve it by submitting a change on GitHub: <br />
         <a href="https://github.com/njh/radiodns-uk">https://github.com/njh/radiodns-uk</a>
       </p>
